--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "build": "babel src --extensions .ts --copy-files -d ."
   },
   "dependencies": {
-    "@repcomm/exponent-ts": "^1.1.9"
+    "@repcomm/exponent-ts": "^1.1.9",
+    "@repcomm/gameinput-ts": "^1.10.4",
+    "ogl-typescript": "git://github.com/RepComm/ogl-typescript/tree/temp-npm-installable"
   }
 }
